added the navBar, works still working on it though

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">BudgetingMadeSimple</string>
     <string name="back">back</string>
+    <string name="startup"><![CDATA[<username>]]></string>
 
     <string-array name="time_array">
         <item>all times</item>
