fixed formatting and category name not displaying in MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="startup"><![CDATA[<username>]]></string>
 
     <string-array name="time_array">
-        <item>all times</item>
+        <item>All Times</item>
         <item>last 7 days</item>
         <item>this month</item>
     </string-array>
